--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.30.1",
     "styled-components": "^5.3.11",
     "three": "^0.150.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
